bugfix: SingleValue. Setting the title breaks the scrolling of the component.

--- a/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
+++ b/eva/src/components/dashBoardInside/SingleValue/sass/dashSingleValue.sass
@@ -58,6 +58,9 @@ $dash-loading-height: 3px
     &.is-header-open
       @include container-height(0px)
 
+    &.is-header-open
+    @include container-height(0px)
+
   .header
     display: flex
     align-items: center
